--- a/config/global_config.yml
+++ b/config/global_config.yml
@@ -3,14 +3,14 @@
 # :::::::::::::::::
 
 # Default domain name to be used
-app_name										: 'Rails 4 Boilerplate'
-app_domain									: 'rails-4-boilerplate.herokuapp.com'
+app_name										: 'Chatbot-Viet'
+app_domain									: 'chatbot-viet.herokuapp.com'
 
 # :::::::::::::::::
 # Social Login
 # :::::::::::::::::
 
-facebook_app_id 						: 'xxxxxxxx'
+facebook_app_id 						: '551004548572417'
 twitter_app_id 							: 'xxxxxxxx'
 linkedin_app_id 						: 'xxxxxxxx'
 
